[package]
name = "rust-trillian"
version = "0.0.1"
authors = ["DazWilkin <dazwilkin@users.noreply.github.com>"]
edition = "2018"

[build-dependencies]
git2 = "0.13.1"
protoc-rust-grpc = "0.6.2"
rust-googleapis = { git = "https://github.com/DazWilkin/rust-googleapis.git" }

[dependencies]
grpc = "0.6.2"
protobuf = "2.8.2"
rust-googleapis = { git = "https://github.com/DazWilkin/rust-googleapis.git" }


